--- a/vue/demo2/index.html
+++ b/vue/demo2/index.html
@@ -12,13 +12,14 @@
             2.<p>{{message | capitalize}}</p>
             <p v-text="message | filterA "></p>
         </div>
-        <!-- 指令 -->
+        <!-- 指令、缩写 -->
         <div id="app2">
             3.<p v-if="greeting">Hello!</p>
             <a v-bind:href="url">link</a>
             <p></p>
             <a :href="url">link</a>
             <a href="#" v-on:click="doSomething">click</a>
+            <a href="#" @:click="doSomething"></a>
         </div>
         
     </body>
