--- a/FE/src/weixin/index.html
+++ b/FE/src/weixin/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>sailsfe</title>
+    <title>weixin</title>
   </head>
   <body>
     <div id="app"></div>
